--- a/Onlin_Exam/appsettings.json
+++ b/Onlin_Exam/appsettings.json
@@ -1,13 +1,16 @@
 {
   "Logging": {
-    "IncludeScopes": false,
+    //"IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  
+  "AppSettings": {
+    "Secret": "My Secret Key personal key"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=.; database=OnLineDB;Trusted_Connection=True"
   },
