--- a/Onlin_Exam/appsettings.json
+++ b/Onlin_Exam/appsettings.json
@@ -1,6 +1,5 @@
 {
   "Logging": {
-    //"IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Information",
@@ -14,10 +13,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.; database=OnLineDB;Trusted_Connection=True"
   },
-  "AllowedHosts": "*",
-  "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:61955",
-    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
-  }
+  "Jwt": {
+    "Key": "Thisismysecretkey",
+    "Issuer": "https://localhost:5000"
+  },
+  "AllowedHosts": "*"
+
 }
