add Authorize Attribute

--- a/Onlin_Exam/appsettings.json
+++ b/Onlin_Exam/appsettings.json
@@ -14,8 +14,9 @@
     "DefaultConnection": "Server=.; database=OnLineDB;Trusted_Connection=True"
   },
   "Jwt": {
-    "Key": "Thisismysecretkey",
-    "Issuer": "https://localhost:5000"
+    "Key": "SecretKey10125779374235322",
+    "Issuer": "https://localhost:5000",
+    "Audience": "http://localhost:5000"
   },
   "AllowedHosts": "*"
 
